# rhyme-detector

./: README.md  pyproject.toml
rhyme_detector/: __init__.py
tests/: test_rhyme_detector.py
